// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Menu Active 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "space-between",
      "maxHeight": "600",
      "padding": "2em",
    }
  }
>
  <nav
    className="menu"
  >
    <button
      aria-label="menu"
      className="button color-base is-round"
      id="menu"
      onClick={[Function]}
    >
      <span
        className="icon color-base size-sm"
      >
        <svg
          fill="currentColor"
          height={21}
          viewBox="0 0 21 21"
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            transform="translate(2 2)"
          >
            <path
              d="M8.5 9.5c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm-4 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm8 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1z"
            />
          </g>
        </svg>
      </span>
    </button>
    <div
      className="menu-list-items position-left"
    >
      <div
        className="menu-item"
      >
        <a
          aria-current="Home"
          href="#"
          onClick={[Function]}
        >
          Home
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          aria-current="Task"
          href="#"
          onClick={[Function]}
        >
          Task
        </a>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Storyshots Molecules/Menu Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "space-between",
      "maxHeight": "600",
      "padding": "2em",
    }
  }
>
  <nav
    className="menu"
  >
    <button
      aria-label="menu"
      className="button color-base is-round"
      id="menu"
      onClick={[Function]}
    >
      <span
        className="icon color-base size-sm"
      >
        <svg
          fill="currentColor"
          height={21}
          viewBox="0 0 21 21"
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            transform="translate(2 2)"
          >
            <path
              d="M8.5 9.5c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm-4 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm8 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1z"
            />
          </g>
        </svg>
      </span>
    </button>
  </nav>
</div>
`;

exports[`Storyshots Molecules/Menu Posicion 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "space-between",
      "maxHeight": "600",
      "padding": "2em",
    }
  }
>
  <nav
    className="menu"
  >
    <button
      aria-label="menu"
      className="button color-base is-round"
      id="menu"
      onClick={[Function]}
    >
      <span
        className="icon color-base size-sm"
      >
        <svg
          fill="currentColor"
          height={21}
          viewBox="0 0 21 21"
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            transform="translate(2 2)"
          >
            <path
              d="M8.5 9.5c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm-4 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm8 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1z"
            />
          </g>
        </svg>
      </span>
    </button>
  </nav>
  <nav
    className="menu"
  >
    <button
      aria-label="menu"
      className="button color-base is-round"
      id="menu"
      onClick={[Function]}
    >
      <span
        className="icon color-base size-sm"
      >
        <svg
          fill="currentColor"
          height={21}
          viewBox="0 0 21 21"
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            transform="translate(2 2)"
          >
            <path
              d="M8.5 9.5c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm-4 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1zm8 0c.5 0 1-.5 1-1s-.5-1-1-1-.999.5-.999 1 .499 1 .999 1z"
            />
          </g>
        </svg>
      </span>
    </button>
  </nav>
</div>
`;
